modificacion media query

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <ul class="nav-ul" id="nav-menu">
                 <li class="link"><a href="#">INICIO</a></li>
                 <li class="link"><a href="#">TRATAMIENTOS</a></li>
-                <li class="link contacto"><a href="#">CONTACTO</a>
-                <li>
+                <li class="link contacto"><a href="/contact.html" target="_blank">CONTACTO</a></li>
+                
             </ul>
            </nav>
 
@@ -39,7 +39,7 @@
 
         
         <header>
-            <p class="p1">BIENVENIDOS A LA EXPERIENCIA <i>CUARSO</i></p>
+            <p class="p1">BIENVENIDOS A LA EXPERIENCIA CUARSO</p>
 
             <p class="p2">Nuestros tratamientos corporales ofrecen una experiencia única que nutre y revitaliza su
                 cuerpo y mente. <br><span class="reserva"><i class="bi bi-arrow-right"></i>Reserva ahora y comienza tu
